# website_generator

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: build.yml  linters.yml
.github/workflows/: build.yml  linters.yml  memcheck.yml  tests.yml
doc/: SolutionAnalyze.md  WebsiteGeneratorUML.drawio
project/: main.cpp
project/include/: FSEntryFinder.hpp  Generator.hpp  Translator.hpp
project/src/: FSEntryFinder.cpp  Generator.cpp  Translator.cpp
tests/: FSEntryFinderTests.cpp  GeneratorTests.cpp  TranslatorTests.cpp
tests/GeneratorTestsData/input/: ord_file
tools/: .clang-format  build.sh  format-code.sh  linter-checks.sh  valgrind-check.sh
